--- a/public/index.html
+++ b/public/index.html
@@ -81,16 +81,16 @@
 
             <!-- Navigation Links -->
             <div id="mobile-menu" class="absolute top-16 right-0 bg-blue-600 text-white w-full md:hidden text-center">
-                <a href="#services" class="block py-2 hover:bg-blue-700 transition">Services</a>
-                <a href="#about" class="block py-2 hover:bg-blue-700 transition">About Us</a>
-                <a href="#contact" class="block py-2 hover:bg-blue-700 transition">Contact</a>
+                <a href="service.html" class="block py-2 hover:bg-blue-700 transition">Services</a>
+                <a href="about.html" class="block py-2 hover:bg-blue-700 transition">About Us</a>
+                <a href="contact.html" class="block py-2 hover:bg-blue-700 transition">Contact</a>
             </div>
 
             <!-- Desktop Navigation Links -->
             <div class="hidden md:flex space-x-6">
-                <a href="#services" class="text-white hover:text-gray-200 transition">Services</a>
-                <a href="#about" class="text-white hover:text-gray-200 transition">About Us</a>
-                <a href="#contact" class="text-white hover:text-gray-200 transition">Contact</a>
+                <a href="service.html" class="text-white hover:text-gray-200 transition">Services</a>
+                <a href="about.html" class="text-white hover:text-gray-200 transition">About Us</a>
+                <a href="contact.html" class="text-white hover:text-gray-200 transition">Contact</a>
             </div>
         </div>
     </nav>
