--- a/public/contact.html
+++ b/public/contact.html
@@ -25,11 +25,11 @@
         <p>If you have any questions or would like to get in touch, please fill out the form below:</p>
         <form>
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required class="border rounded w-full p-2 mb-2">
+            <input type="text" id="name" name="name" required class="border rounded w-full p-2 mb-2"><br>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required class="border rounded w-full p-2 mb-2">
+            <input type="email" id="email" name="email" required class="border rounded w-full p-2 mb-2"><br>
             <label for="message">Message:</label>
-            <textarea id="message" name="message" required class="border rounded w-full p-2 mb-2"></textarea>
+            <textarea id="message" name="message" required class="border rounded w-full p-2 mb-2"></textarea><br>
             <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded">Send</button>
         </form>
     </div>
