--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
             <!-- Logo -->
             <div class="flex items-center">
-                <img src="logo.png" alt="Ahadu Printing Logo" class="h-12">
+                <a href="index.html"><img src="logo.png" alt="Ahadu Printing Logo" class="h-12"></a>
                 <span class="ml-4 text-white text-2xl font-bold">Ahadu Printing</span>
             </div>
 
