--- a/public/contact.html
+++ b/public/contact.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <img src="logo.png" alt="Ahadu Printing Logo" class="logo">
+        <a href="index.html"><img src="logo.png" alt="Ahadu Printing Logo" class="h-12"></a>
         <h1>Ahadu Printing</h1>
         <div>
             <a href="services.html">Services</a>
