--- a/public/service.html
+++ b/public/service.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="index.html"><img src="logo.png" alt="Ahadu Printing Logo" class="h-12"></a>
+        <a href="index.html>"<img src="logo.png" alt="Ahadu Printing Logo" class="logo"></a>
         <h1>Ahadu Printing</h1>
         <div>
             <a href="services.html">Services</a>
