--- a/public/service.html
+++ b/public/service.html
@@ -13,7 +13,7 @@
         <a href="index.html>"<img src="logo.png" alt="Ahadu Printing Logo" class="logo"></a>
         <h1>Ahadu Printing</h1>
         <div>
-            <a href="services.html">Services</a>
+            <a href="service.html">Services</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
