--- a/public/contact.html
+++ b/public/contact.html
@@ -10,10 +10,11 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="index.html"><img src="logo.png" alt="Ahadu Printing Logo" class="h-12"></a>
+        <a href="index.html"> <!-- Replace with your desired URL -->
+    <img src="logo.png" alt="Ahadu Printing Logo" class="logo"></a>
         <h1>Ahadu Printing</h1>
         <div>
-            <a href="services.html">Services</a>
+            <a href="service.html">Services</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
