--- a/public/service.html
+++ b/public/service.html
@@ -10,7 +10,8 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="index.html>"<img src="logo.png" alt="Ahadu Printing Logo" class="logo"></a>
+        <a href="index.html"> <!-- Replace with your desired URL -->
+    <img src="logo.png" alt="Ahadu Printing Logo" class="logo"></a>
         <h1>Ahadu Printing</h1>
         <div>
             <a href="service.html">Services</a>
