--- a/public/contact.html
+++ b/public/contact.html
@@ -22,6 +22,7 @@
             background-color: #343a40;
             padding: 10px 20px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
         .navbar a {
@@ -38,6 +39,37 @@
 
         .logo {
             height: 50px;
+        }
+
+        /* Hamburger Menu */
+        .menu-icon {
+            display: none;
+            cursor: pointer;
+        }
+
+        .menu-icon div {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 5px 0;
+        }
+
+        /* Mobile Menu */
+        .mobile-menu {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            top: 60px; /* Adjust based on navbar height */
+            right: 20px;
+            background-color: #343a40;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .mobile-menu a {
+            padding: 10px;
+            margin: 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         /* Section Styles */
@@ -96,6 +128,25 @@
         button:hover {
             background-color: #0056b3; /* Darker blue */
         }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .navbar div {
+                display: none; /* Hide links by default */
+            }
+
+            .menu-icon {
+                display: block; /* Show hamburger icon */
+            }
+
+            .mobile-menu {
+                display: flex; /* Show mobile menu when toggled */
+            }
+
+            .navbar.open div {
+                display: flex; /* Show links when navbar is open */
+            }
+        }
     </style>
 </head>
 <body>
@@ -106,6 +157,16 @@
             <img src="logo.png" alt="Ahadu Printing Logo" class="logo">
         </a>
         <h1 style="color: white; margin: 0;">Ahadu Printing</h1>
+        <div class="menu-icon" id="menu-toggle">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="mobile-menu" id="mobile-menu">
+            <a href="service.html">Services</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
+        </div>
         <div>
             <a href="service.html">Services</a>
             <a href="about.html">About Us</a>
@@ -130,6 +191,17 @@
             <button type="submit">Send</button>
         </form>
     </div>
+
+    <script>
+        const menuToggle = document.getElementById('menu-toggle');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        menuToggle.addEventListener('click', () => {
+            mobileMenu.style.display = mobileMenu.style.display === 'flex' ? 'none' : 'flex';
+            const navbar = document.querySelector('.navbar');
+            navbar.classList.toggle('open'); // Add class for open state if needed
+        });
+    </script>
 
 </body>
 </html>
