--- a/public/index.html
+++ b/public/index.html
@@ -20,39 +20,22 @@
         .drop-zone:hover {
             background-color: #e0f2fe;
         }
-        .confirmation-message {
+        .confirmation-message, .awaiting-message, .error-message {
             display: none;
-            background-color: #28a745;
             color: white;
             padding: 20px;
             text-align: center;
             border-radius: 5px;
             margin-bottom: 20px;
+        }
+        .confirmation-message {
+            background-color: #28a745;
+        }
+        .awaiting-message {
+            background-color: #17a2b8;
         }
         .error-message {
-            display: none;
             background-color: #dc3545;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-        /* Hamburger menu styling */
-        .menu-icon {
-            cursor: pointer;
-            display: block;
-        }
-        .menu-icon span {
-            width: 25px;
-            height: 3px;
-            background-color: white;
-            margin: 5px 0;
-            display: block;
-        }
-        /* Hidden mobile menu */
-        #mobile-menu {
-            display: none;
         }
     </style>
 </head>
@@ -61,43 +44,24 @@
     <!-- Navbar -->
     <nav class="bg-gradient-to-r from-blue-500 to-purple-600 shadow-md py-4">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
-            <!-- Logo -->
             <div class="flex items-center">
-                <a href="index.html"><img src="logo.png" alt="Ahadu Printing Logo" class="h-12"></a>
+                <img src="logo.html" alt="Ahadu Printing Logo" class="h-12">
                 <span class="ml-4 text-white text-2xl font-bold">Ahadu Printing</span>
             </div>
-
-            <!-- Welcome Message (Hidden on mobile) -->
             <div class="hidden md:block text-white text-lg font-semibold">
                 Welcome to Our Premium Printing Service!
-            </div>
-
-            <!-- Hamburger Menu Icon (Visible on mobile) -->
-            <div class="block md:hidden menu-icon" id="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-
-            <!-- Navigation Links -->
-            <div id="mobile-menu" class="absolute top-16 right-0 bg-blue-600 text-white w-full md:hidden text-center">
-                <a href="service.html" class="block py-2 hover:bg-blue-700 transition">Services</a>
-                <a href="about.html" class="block py-2 hover:bg-blue-700 transition">About Us</a>
-                <a href="contact.html" class="block py-2 hover:bg-blue-700 transition">Contact</a>
-            </div>
-
-            <!-- Desktop Navigation Links -->
-            <div class="hidden md:flex space-x-6">
-                <a href="service.html" class="text-white hover:text-gray-200 transition">Services</a>
-                <a href="about.html" class="text-white hover:text-gray-200 transition">About Us</a>
-                <a href="contact.html" class="text-white hover:text-gray-200 transition">Contact</a>
             </div>
         </div>
     </nav>
 
+    <!-- Awaiting Confirmation Message -->
+    <div id="awaitingMessage" class="awaiting-message">
+        Submitting your order, please wait...
+    </div>
+
     <!-- Confirmation Message -->
     <div id="confirmationMessage" class="confirmation-message">
-        Your order is confirmed! You will receive a confirmation message on Telegram shortly. If not, feel free to reach us at 0940405038 or 0799445038.
+        Your order is confirmed! You will receive a confirmation message on Telegram shortly.
     </div>
 
     <!-- Error Message -->
@@ -139,9 +103,8 @@
         const submitBtn = document.getElementById('submitBtn');
         const clearBtn = document.getElementById('clearBtn');
         const confirmationMessage = document.getElementById('confirmationMessage');
+        const awaitingMessage = document.getElementById('awaitingMessage');
         const errorMessage = document.getElementById('errorMessage');
-        const menuToggle = document.getElementById('menu-toggle');
-        const mobileMenu = document.getElementById('mobile-menu');
 
         fileUploadBox.addEventListener('click', () => {
             fileInput.click();
@@ -161,11 +124,13 @@
             e.preventDefault();
             confirmationMessage.style.display = 'none';
             errorMessage.style.display = 'none';
+            awaitingMessage.style.display = 'block';  // Show awaiting message
 
             const phoneNumber = document.getElementById('phoneNumber').value;
             const additionalInfo = document.getElementById('additionalInfo').value;
 
             if (!phoneNumber || !fileInput.files.length) {
+                awaitingMessage.style.display = 'none';
                 errorMessage.style.display = 'block';  // Show error message
                 return;
             }
@@ -184,35 +149,34 @@
             })
             .then(response => response.json())
             .then(data => {
+                awaitingMessage.style.display = 'none';
                 if (data.message) {
                     confirmationMessage.style.display = 'block';  // Show confirmation message
+                    clearForm();  // Clear form data after submission
                 } else {
                     errorMessage.style.display = 'block';  // Show error message
                 }
             })
             .catch(err => {
-                console.error('Error:', err);
+                awaitingMessage.style.display = 'none';
                 errorMessage.style.display = 'block';  // Show error message
+                console.error('Error:', err);
             });
         });
 
         clearBtn.addEventListener('click', () => {
+            clearForm();
+        });
+
+        function clearForm() {
             fileInput.value = '';
             document.getElementById('phoneNumber').value = '';
             document.getElementById('additionalInfo').value = '';
             fileUploadBox.innerHTML = '<p class="text-gray-500">Drag and drop your files here or <span class="text-blue-500 font-bold">browse</span></p>';
             confirmationMessage.style.display = 'none';
             errorMessage.style.display = 'none';
-        });
-
-        // Handle hamburger menu toggle
-        menuToggle.addEventListener('click', () => {
-            if (mobileMenu.style.display === 'block') {
-                mobileMenu.style.display = 'none';
-            } else {
-                mobileMenu.style.display = 'block';
-            }
-        });
+            awaitingMessage.style.display = 'none';
+        }
     </script>
 
 </body>
