--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,22 @@
         .error-message {
             background-color: #dc3545;
         }
+        /* Hamburger menu styling */
+        .menu-icon {
+            cursor: pointer;
+            display: block;
+        }
+        .menu-icon span {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 5px 0;
+            display: block;
+        }
+        /* Hidden mobile menu */
+        #mobile-menu {
+            display: none;
+        }
     </style>
 </head>
 <body class="bg-gray-50 font-sans">
@@ -44,12 +60,36 @@
     <!-- Navbar -->
     <nav class="bg-gradient-to-r from-blue-500 to-purple-600 shadow-md py-4">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
+            <!-- Logo -->
             <div class="flex items-center">
-                <img src="logo.html" alt="Ahadu Printing Logo" class="h-12">
+                <img src="logo.png" alt="Ahadu Printing Logo" class="h-12">
                 <span class="ml-4 text-white text-2xl font-bold">Ahadu Printing</span>
             </div>
+
+            <!-- Welcome Message (Hidden on mobile) -->
             <div class="hidden md:block text-white text-lg font-semibold">
                 Welcome to Our Premium Printing Service!
+            </div>
+
+            <!-- Hamburger Menu Icon (Visible on mobile) -->
+            <div class="block md:hidden menu-icon" id="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="absolute top-16 right-0 bg-blue-600 text-white w-full md:hidden text-center">
+                <a href="#services" class="block py-2 hover:bg-blue-700 transition">Services</a>
+                <a href="#about" class="block py-2 hover:bg-blue-700 transition">About Us</a>
+                <a href="#contact" class="block py-2 hover:bg-blue-700 transition">Contact</a>
+            </div>
+
+            <!-- Desktop Navigation Links -->
+            <div class="hidden md:flex space-x-6">
+                <a href="service.html" class="text-white hover:text-gray-200 transition">Services</a>
+                <a href="about.html" class="text-white hover:text-gray-200 transition">About Us</a>
+                <a href="contact.html" class="text-white hover:text-gray-200 transition">Contact</a>
             </div>
         </div>
     </nav>
@@ -105,6 +145,8 @@
         const confirmationMessage = document.getElementById('confirmationMessage');
         const awaitingMessage = document.getElementById('awaitingMessage');
         const errorMessage = document.getElementById('errorMessage');
+        const menuToggle = document.getElementById('menu-toggle');
+        const mobileMenu = document.getElementById('mobile-menu');
 
         fileUploadBox.addEventListener('click', () => {
             fileInput.click();
@@ -177,6 +219,11 @@
             errorMessage.style.display = 'none';
             awaitingMessage.style.display = 'none';
         }
+
+        // Handle hamburger menu toggle
+        menuToggle.addEventListener('click', () => {
+            mobileMenu.style.display = mobileMenu.style.display === 'block' ? 'none' : 'block';
+        });
     </script>
 
 </body>
