--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         .drop-zone:hover {
             background-color: #e0f2fe;
         }
-        .confirmation-message, .awaiting-message, .error-message {
+        .confirmation-message, .error-message {
             display: none;
             color: white;
             padding: 20px;
@@ -31,11 +31,37 @@
         .confirmation-message {
             background-color: #28a745;
         }
-        .awaiting-message {
-            background-color: #17a2b8;
-        }
         .error-message {
             background-color: #dc3545;
+        }
+        /* Full screen loader overlay */
+        #loadingOverlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 1.5rem;
+        }
+        /* Spinning loader */
+        .loader {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
         /* Hamburger menu styling */
         .menu-icon {
@@ -56,6 +82,14 @@
     </style>
 </head>
 <body class="bg-gray-50 font-sans">
+
+    <!-- Full-Screen Loading Overlay -->
+    <div id="loadingOverlay">
+        <div>
+            <div class="loader"></div>
+            <p class="mt-4">Submitting your order, please wait...</p>
+        </div>
+    </div>
 
     <!-- Navbar -->
     <nav class="bg-gradient-to-r from-blue-500 to-purple-600 shadow-md py-4">
@@ -87,17 +121,12 @@
 
             <!-- Desktop Navigation Links -->
             <div class="hidden md:flex space-x-6">
-                <a href="service.html" class="text-white hover:text-gray-200 transition">Services</a>
-                <a href="about.html" class="text-white hover:text-gray-200 transition">About Us</a>
-                <a href="contact.html" class="text-white hover:text-gray-200 transition">Contact</a>
+                <a href="#services" class="text-white hover:text-gray-200 transition">Services</a>
+                <a href="#about" class="text-white hover:text-gray-200 transition">About Us</a>
+                <a href="#contact" class="text-white hover:text-gray-200 transition">Contact</a>
             </div>
         </div>
     </nav>
-
-    <!-- Awaiting Confirmation Message -->
-    <div id="awaitingMessage" class="awaiting-message">
-        Submitting your order, please wait...
-    </div>
 
     <!-- Confirmation Message -->
     <div id="confirmationMessage" class="confirmation-message">
@@ -143,7 +172,7 @@
         const submitBtn = document.getElementById('submitBtn');
         const clearBtn = document.getElementById('clearBtn');
         const confirmationMessage = document.getElementById('confirmationMessage');
-        const awaitingMessage = document.getElementById('awaitingMessage');
+        const loadingOverlay = document.getElementById('loadingOverlay');
         const errorMessage = document.getElementById('errorMessage');
         const menuToggle = document.getElementById('menu-toggle');
         const mobileMenu = document.getElementById('mobile-menu');
@@ -166,13 +195,11 @@
             e.preventDefault();
             confirmationMessage.style.display = 'none';
             errorMessage.style.display = 'none';
-            awaitingMessage.style.display = 'block';  // Show awaiting message
 
             const phoneNumber = document.getElementById('phoneNumber').value;
             const additionalInfo = document.getElementById('additionalInfo').value;
 
             if (!phoneNumber || !fileInput.files.length) {
-                awaitingMessage.style.display = 'none';
                 errorMessage.style.display = 'block';  // Show error message
                 return;
             }
@@ -184,6 +211,9 @@
             formData.append('phoneNumber', phoneNumber);
             formData.append('additionalInfo', additionalInfo);
 
+            // Show loading overlay
+            loadingOverlay.style.display = 'flex';
+
             // Send form data via Fetch API
             fetch('/api/submit-order', {
                 method: 'POST',
@@ -191,7 +221,7 @@
             })
             .then(response => response.json())
             .then(data => {
-                awaitingMessage.style.display = 'none';
+                loadingOverlay.style.display = 'none';  // Hide loader
                 if (data.message) {
                     confirmationMessage.style.display = 'block';  // Show confirmation message
                     clearForm();  // Clear form data after submission
@@ -200,7 +230,7 @@
                 }
             })
             .catch(err => {
-                awaitingMessage.style.display = 'none';
+                loadingOverlay.style.display = 'none';  // Hide loader
                 errorMessage.style.display = 'block';  // Show error message
                 console.error('Error:', err);
             });
@@ -217,7 +247,7 @@
             fileUploadBox.innerHTML = '<p class="text-gray-500">Drag and drop your files here or <span class="text-blue-500 font-bold">browse</span></p>';
             confirmationMessage.style.display = 'none';
             errorMessage.style.display = 'none';
-            awaitingMessage.style.display = 'none';
+            loadingOverlay.style.display = 'none';
         }
 
         // Handle hamburger menu toggle
