--- a/public/index.html
+++ b/public/index.html
@@ -42,13 +42,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.8);
             z-index: 1000;
             display: flex;
             justify-content: center;
             align-items: center;
             color: white;
-            font-size: 1.5rem;
+            flex-direction: column;
         }
         /* Spinning loader */
         .loader {
@@ -62,6 +62,10 @@
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+        .loader-text {
+            font-size: 1.2rem;
+            margin-top: 20px;
         }
         /* Hamburger menu styling */
         .menu-icon {
@@ -85,10 +89,8 @@
 
     <!-- Full-Screen Loading Overlay -->
     <div id="loadingOverlay">
-        <div>
-            <div class="loader"></div>
-            <p class="mt-4">Submitting your order, please wait...</p>
-        </div>
+        <div class="loader"></div>
+        <p class="loader-text">Submitting your order, please wait...</p>
     </div>
 
     <!-- Navbar -->
@@ -96,7 +98,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
             <!-- Logo -->
             <div class="flex items-center">
-                <img src="logo.html" alt="Ahadu Printing Logo" class="h-12">
+                <img src="logo.png" alt="Ahadu Printing Logo" class="h-12">
                 <span class="ml-4 text-white text-2xl font-bold">Ahadu Printing</span>
             </div>
 
