--- a/public/index.html
+++ b/public/index.html
@@ -20,39 +20,33 @@
         .drop-zone:hover {
             background-color: #e0f2fe;
         }
-        .confirmation-message {
+        .confirmation-message, .error-message {
             display: none;
-            background-color: #28a745;
             color: white;
             padding: 20px;
             text-align: center;
             border-radius: 5px;
             margin-bottom: 20px;
+        }
+        .confirmation-message {
+            background-color: #28a745;
         }
         .error-message {
-            display: none;
             background-color: #dc3545;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-radius: 5px;
-            margin-bottom: 20px;
         }
-        /* Hamburger menu styling */
-        .menu-icon {
-            cursor: pointer;
-            display: block;
+        /* Spinner styles for submit button */
+        .submit-spinner {
+            border: 3px solid #f3f3f3;
+            border-top: 3px solid #3498db;
+            border-radius: 50%;
+            width: 16px;
+            height: 16px;
+            animation: spin 1s linear infinite;
+            display: inline-block;
         }
-        .menu-icon span {
-            width: 25px;
-            height: 3px;
-            background-color: white;
-            margin: 5px 0;
-            display: block;
-        }
-        /* Hidden mobile menu */
-        #mobile-menu {
-            display: none;
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
@@ -79,18 +73,18 @@
                 <span></span>
             </div>
 
-            <!-- Navigation Links -->
+            <!-- Mobile Menu -->
             <div id="mobile-menu" class="absolute top-16 right-0 bg-blue-600 text-white w-full md:hidden text-center">
-                <a href="service.html" class="block py-2 hover:bg-blue-700 transition">Services</a>
-                <a href="about.html" class="block py-2 hover:bg-blue-700 transition">About Us</a>
-                <a href="contact.html" class="block py-2 hover:bg-blue-700 transition">Contact</a>
+                <a href="#services" class="block py-2 hover:bg-blue-700 transition">Services</a>
+                <a href="#about" class="block py-2 hover:bg-blue-700 transition">About Us</a>
+                <a href="#contact" class="block py-2 hover:bg-blue-700 transition">Contact</a>
             </div>
 
             <!-- Desktop Navigation Links -->
             <div class="hidden md:flex space-x-6">
-                <a href="service.html" class="text-white hover:text-gray-200 transition">Services</a>
-                <a href="about.html" class="text-white hover:text-gray-200 transition">About Us</a>
-                <a href="contact.html" class="text-white hover:text-gray-200 transition">Contact</a>
+                <a href="#services" class="text-white hover:text-gray-200 transition">Services</a>
+                <a href="#about" class="text-white hover:text-gray-200 transition">About Us</a>
+                <a href="#contact" class="text-white hover:text-gray-200 transition">Contact</a>
             </div>
         </div>
     </nav>
@@ -128,7 +122,9 @@
 
         <!-- Action Buttons -->
         <div class="mt-6 flex justify-end space-x-4">
-            <button id="submitBtn" class="hover-button px-6 py-3 bg-blue-500 text-white rounded-lg font-bold shadow hover:shadow-md transition-all">Submit Order</button>
+            <button id="submitBtn" class="hover-button px-6 py-3 bg-blue-500 text-white rounded-lg font-bold shadow hover:shadow-md transition-all">
+                Submit Order
+            </button>
             <button id="clearBtn" class="hover-button px-6 py-3 bg-gray-200 text-gray-700 rounded-lg font-bold shadow hover:shadow-md transition-all">Clear</button>
         </div>
     </main>
@@ -165,6 +161,7 @@
             const phoneNumber = document.getElementById('phoneNumber').value;
             const additionalInfo = document.getElementById('additionalInfo').value;
 
+            // Validate form
             if (!phoneNumber || !fileInput.files.length) {
                 errorMessage.style.display = 'block';  // Show error message
                 return;
@@ -177,6 +174,9 @@
             formData.append('phoneNumber', phoneNumber);
             formData.append('additionalInfo', additionalInfo);
 
+            // Show spinner on the submit button
+            submitBtn.innerHTML = '<span class="submit-spinner"></span> Submitting...';
+
             // Send form data via Fetch API
             fetch('/api/submit-order', {
                 method: 'POST',
@@ -184,34 +184,37 @@
             })
             .then(response => response.json())
             .then(data => {
+                submitBtn.innerHTML = 'Submit Order';  // Reset the button text
                 if (data.message) {
                     confirmationMessage.style.display = 'block';  // Show confirmation message
+                    clearForm();  // Clear form data after submission
                 } else {
                     errorMessage.style.display = 'block';  // Show error message
                 }
             })
             .catch(err => {
-                console.error('Error:', err);
+                submitBtn.innerHTML = 'Submit Order';  // Reset the button text
                 errorMessage.style.display = 'block';  // Show error message
+                console.error('Error:', err);
             });
         });
 
         clearBtn.addEventListener('click', () => {
+            clearForm();
+        });
+
+        function clearForm() {
             fileInput.value = '';
             document.getElementById('phoneNumber').value = '';
             document.getElementById('additionalInfo').value = '';
             fileUploadBox.innerHTML = '<p class="text-gray-500">Drag and drop your files here or <span class="text-blue-500 font-bold">browse</span></p>';
             confirmationMessage.style.display = 'none';
             errorMessage.style.display = 'none';
-        });
+        }
 
         // Handle hamburger menu toggle
         menuToggle.addEventListener('click', () => {
-            if (mobileMenu.style.display === 'block') {
-                mobileMenu.style.display = 'none';
-            } else {
-                mobileMenu.style.display = 'block';
-            }
+            mobileMenu.style.display = mobileMenu.style.display === 'block' ? 'none' : 'block';
         });
     </script>
 
